# Finance_Tracker

./: .env.example  .gitignore  .replit  README.md  build.sh  db.sqlite3  pyproject.toml  render.yaml  replit.md  vite.config.js
finance_tracker/: settings.py  urls.py
frontend/: App.jsx  AppLayout.jsx  CategoriesPage.jsx  DashboardPage.jsx  LoginPage.jsx  ProtectedRoute.jsx  PublicRoute.jsx  RegisterPage.jsx  TransactionForm.jsx  TransactionsPage.jsx  axios.js  index.css  index.html  index.jsx  package.json  services.js  tailwind.config.js
src/pages/: Login.jsx  Register.jsx  VerifyEmail.jsx
transactions/: serializers.py
users/: serializers.py  urls.py  views.py
